[package]
name = "jayutil-rs"
version = "0.0.2"
edition = "2024"
license = "MIT"
description = "a set of useful elements for rust"
authors = ["Jayden Huang"]
homepage = "https://github.com/JaydenHuang555/jayutil-rs"
repository = "https://github.com/JaydenHuang555/jayutil-rs"
# documentation = "N/A"
keywords = ["jayutil"]

[features]
default = []
unstable = []

